--- a/.tas.yml
+++ b/.tas.yml
@@ -2,9 +2,9 @@
 framework: mocha                  # Mention the testing framework mocha or jest
 postMerge:
     pattern:
-    - "./**/*.js"            # Glob pattern to path where tests that should run post-merge are written
+    - "./mocha-tests/*.js"            # Glob pattern to path where tests that should run post-merge are written
 preMerge:
-    - "./**/*.js"              # Glob pattern to path where tests that should run pre-merge are written
+    - "./mocha-tests/*.js"              # Glob pattern to path where tests that should run pre-merge are written
 preRun:
     - npm i                   # Mention pre-run steps here
 postRun:
