--- a/.tas.yml
+++ b/.tas.yml
@@ -1,5 +1,7 @@
 ---
 framework: "jest"
+blocklist:
+  - "jest-tests/alibaba.spec.js##Alibaba Search"
 postMerge:
   pattern:
     - "./jest-tests/*.js"
